--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <img class="logo" src="https://static.vecteezy.com/system/resources/previews/020/489/291/non_2x/3d-logo-of-apple-iphone-free-png.png" width="350px" height="350px"/>
+            <img class="logo" src="https://static.vecteezy.com/system/resources/previews/020/489/291/non_2x/3d-logo-of-apple-iphone-free-png.png" width="250px" height="250px"/>
             <a class="button" href="">Знижки</a>
         </header>
         <nav>
@@ -78,7 +78,7 @@
                 <p class="footer-text"><span class="tel">Телефон:</span> 5401-564</p>
             </div>
             <div class="footer-logo">
-                <img src="https://static.vecteezy.com/system/resources/previews/020/489/291/non_2x/3d-logo-of-apple-iphone-free-png.png"/>
+                <img src="https://static.vecteezy.com/system/resources/previews/020/489/291/non_2x/3d-logo-of-apple-iphone-free-png.png" width="250px" height"250px"/>
             </div>
         </footer>
     </body>
